<resources>
    <string name="app_name">CreationModele</string>
    <string name="CreationModele">Créer un modèle</string>
    <string name="ReprendreModele">Reprendre un modèle</string>
    <string name="CreerModele">Créer un nouveau modèle</string>
    <string name="NomModele">Nom du modèle :</string>
    <string name="nomModele">Entrez le nom de votre nouveau modèle ici.</string>
    <string name="nouveauModeleWarning">ATTENTION !! LES DONNES NON SAUVEGARDEES DU MODELE ACTUEL SERONT PERDUS !!</string>
    <string name="EditionModele">Editer le modèle actuel</string>
    <string name="ModeleActuel">"Le modèle actuel est : "</string>
    <string name="SauvergarderModele">Sauvegarder un modèle</string>
    <string name="Nom">Nom</string>
    <string name="TexteVide" translatable="false" />
    <string name="AjouterPiece">Ajouter une pièce</string>
    <string name="Nord">Nord\n</string>
    <string name="Est">Est\n</string>
    <string name="Ouest">Ouest</string>
    <string name="Sud">Sud</string>
    <string name="Valider">Valider</string>
    <string name="SupprOuvertures">Supprimer toutes les ouvertures</string>
    <string name="SupprLastOuverture">Supprimer la dernière ouverture</string>
    <string name="tutoAcces">Appuyez avec 2 doigts sur l\'image pour faire un accès</string>

</resources>