<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_creation_modele"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginTop="205dp"
        android:layout_marginEnd="159dp"
        android:backgroundTint="@android:color/holo_green_light"
        android:onClick="creerModele"
        android:text="@string/CreationModele"
        android:textColor="#0D47A1"
        app:layout_constraintBottom_toTopOf="@+id/button_charger_modele"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_charger_modele"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="272dp"
        android:backgroundTint="@color/material_dynamic_secondary70"
        android:text="@string/ReprendreModele"
        android:textColor="#283593"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_creation_modele" />

    <Button
        android:id="@+id/button_edition_modele"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="241dp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:onClick="EditionModele"
        android:text="@string/EditionModele"
        android:textColor="#1A237E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_charger_modele" />

    <Button
        android:id="@+id/button_sauvegarde_modele"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="147dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:onClick="SauvegarderModele"
        android:text="@string/SauvergarderModele"
        android:textColor="#212121"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_edition_modele" />

</androidx.constraintlayout.widget.ConstraintLayout>