<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreationModele">

    <TextView
        android:id="@+id/textView_Creation_Modele"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="126dp"
        android:layout_marginTop="153dp"
        android:layout_marginEnd="126dp"
        android:layout_marginBottom="29dp"
        android:text="@string/CreerModele"
        app:layout_constraintBottom_toTopOf="@+id/textView_nom_modele"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_nom_modele"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="153dp"
        android:layout_marginBottom="148dp"
        android:text="@string/NomModele"
        app:layout_constraintBottom_toTopOf="@+id/button_nouveau_modele"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Creation_Modele" />

    <Button
        android:id="@+id/button_nouveau_modele"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="159dp"
        android:layout_marginTop="148dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="315dp"
        android:text="@string/CreerModele"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_nom_modele"
        app:layout_constraintVertical_bias="0.0"
        android:onClick="CreerNouveeauModele"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/editTextText_nouveau_modele"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="101dp"
        android:layout_marginEnd="98dp"
        android:layout_marginBottom="151dp"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/nomModele"
        app:layout_constraintBottom_toTopOf="@+id/button_nouveau_modele"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_nom_modele"
        tools:ignore="LabelFor"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="173dp"
        android:layout_marginTop="67dp"
        android:layout_marginEnd="180dp"
        android:layout_marginBottom="64dp"
        android:capitalize="characters"
        android:clickable="false"
        android:foregroundTint="#BC2B2B"
        android:text="@string/nouveauModeleWarning"
        app:layout_constraintBottom_toTopOf="@+id/button_nouveau_modele"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText_nouveau_modele"
        app:layout_constraintVertical_bias="0.515" />

</androidx.constraintlayout.widget.ConstraintLayout>